<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#C0C0C0" 
     >

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:background="#808080"  
        android:paddingTop="5dp" >
        
        <Button 
            android:id="@+id/addContactBtn"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
       		android:text="@string/addContacts"
        	android:layout_alignParentLeft="true"     
        ></Button>
        
        <ToggleButton android:id="@+id/togglebutton"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textOn=" ON"
        	android:textOff="OFF"
        	android:layout_alignParentRight="true"
        />
     </RelativeLayout>
      
    <ListView
        android:id="@+android:id/list"
        android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:layout_below="@+id/topBar"
         android:background="#000000" 
        >
        
    </ListView>
    
	<RelativeLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true" 
        
         >
        
	    <Button
            android:id="@+id/listenBtn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textSize="20dp"
            android:text="@string/listenBtn" 
            android:layout_alignParentLeft="true"     
             />
        <Button
            android:id="@+id/recordsendBtn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textSize="20dp"
            android:text="@string/recordsendBtn" 
            android:layout_alignParentRight="true"     
             />
 
        
        <!-- 
        <Button
            android:id="@+id/playBtn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignRightOf="@+id/listenBtn"
            android:layout_centerHorizontal="true"
            android:text="@string/playBtn"
            android:textSize="20dp" /> 
      -->
        </RelativeLayout>

</RelativeLayout>